[project]
name = "dbtlearn-snowflake-importer"
version = "0.1.0"
description = "Streamlit app to help students set up Snowflake for dbt Zero to Hero course"
requires-python = "==3.13.*"
dependencies = [
    "streamlit==1.53.0",
    "sqlalchemy==2.0.45",
    "snowflake-sqlalchemy==1.8.2",
    "snowflake-connector-python==4.2.0",
    "pydantic==2.12.5",
    "cryptography==46.0.3",
    "pyyaml==6.0.3",
    # Security fixes for transitive dependencies
    "urllib3>=2.6.3",
    "filelock>=3.20.3",
]

[project.optional-dependencies]
dev = [
    "black==25.12.0",
    "flake8==7.3.0",
    "isort==7.0.0",
    "pytest==9.0.2",
    "python-dotenv==1.2.1",
    "playwright>=1.40.0",
]

[dependency-groups]
dev = [
    "pytest-timeout==2.4.0",
]
