[project]
name = "dbtlearn-snowflake-importer"
version = "0.1.0"
description = "Streamlit app to help students set up Snowflake for dbt Zero to Hero course"
requires-python = "==3.13.*"
dependencies = [
    "streamlit==1.54.0",
    "sqlalchemy==2.0.45",
    "snowflake-sqlalchemy==1.8.2",
    "snowflake-connector-python==4.4.0",
    "pydantic==2.12.5",
    "cryptography==46.0.7",
    "pyyaml==6.0.3",
    "watchdog",
    # Security fixes for transitive dependencies
    "urllib3>=2.7.0",
    "filelock>=3.20.3",
    "gitpython>=3.1.50",
    "pillow>=12.2.0",
    "pygments>=2.20.0",
    "requests>=2.33.0",
    "pyopenssl>=26.0.0",
    "pyjwt>=2.12.0",
]

[dependency-groups]
dev = [
    "black==26.3.1",
    "flake8==7.3.0",
    "isort==7.0.0",
    "pytest==9.0.3",
    "pytest-timeout==2.4.0",
    "python-dotenv==1.2.2",
    "playwright>=1.40.0",
]
